--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,6 +1,6 @@
 #Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=A location code is required
-AboutOpenLCA=About openLCA
+AboutOpenLCA=About aicpLCA
 AccessAndUseRestrictions=Access and use restrictions
 Active=Active
 ActivityQuantity=Activity quantity
@@ -150,7 +150,7 @@ CostValue=Cost value
 Costs=Costs
 CostsPerUnit=Costs/revenues per unit
 CostsRevenues=Costs/Revenues
-CouldNotAllocateMemoryError=openLCA could not allocate enough physical memory to perform the calculation. Please adjust your memory settings under 'File/Preferences' -> Configuration
+CouldNotAllocateMemoryError=aicpLCA could not allocate enough physical memory to perform the calculation. Please adjust your memory settings under 'File/Preferences' -> Configuration
 CouldNotConnect=Could not connect, please check your internet connection and the provided url
 CouldNotFindKMLData=Could not find KML data in the file you provided. Is it compliant to the EcoSpold2 format? More information regarding the format can be found at http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
 CouldNotOpenDatabase=Could not open database
@@ -189,7 +189,7 @@ Cutoff=Cut-off
 DBImportNoTarget=You need to open a target database of the import.
 DBImportNoTargetConnectionFailedMessage=Could not get the version from the source database.
 DBImportUpdateDatabaseQuestion=In order to run the import you need to update the source database. Do you want to do this?
-DBImportVersionNewerMessage=The version of the source database is newer than this version of openLCA.
+DBImportVersionNewerMessage=The version of the source database is newer than this version of aicpLCA.
 DataCollectionPeriod=Data collection period
 DataCompleteness=Data completeness
 DataDocumentor=Data documentor
@@ -211,11 +211,11 @@ DatabaseContent=Database content
 DatabaseImport=Database import
 DatabaseImportDescription=Imports data from an existing database into the active database
 DatabaseName=Database name
-DatabaseNewerThanThisError=The database was created or updated with an openLCA version that is newer than your current version.
+DatabaseNewerThanThisError=The database was created or updated with an aicpLCA version that is newer than your current version.
 DatabaseRenameError=The given name is not a valid or a database with this name already exists.
 DatabaseType=Database type
 DatabaseValidationCompleteNoErrorsWereFound=Database validation complete. No errors were found.
-DatabaseVersionCheckFailed=Could not get the version from the database. Is this an openLCA database?
+DatabaseVersionCheckFailed=Could not get the version from the database. Is this an aicpLCA database?
 DatabaseWasExportedToFile=Database was exported to file
 DecimalSeparator=Decimal separator
 DefaultFlowProperty=Default flow property
@@ -316,7 +316,7 @@ FetchingData=Fetching data
 File=&File
 FileAlreadyExists=File already exists
 FileDoesNotExist=File does not exist
-FileImportPage_Description=Please select the files to import into openLCA
+FileImportPage_Description=Please select the files to import into aicpLCA
 Files=Files
 Filter=Filter
 FilterByName=Filter by name
@@ -464,7 +464,7 @@ Layout=Layout
 LayoutAs=Layout as {0}
 LciaCategoryDescriptionTable=LCIA category description table
 LciaResultTable=LCIA result table
-LibgfortanInfo=openLCA uses a native library for improved calculation performance. It requires the package libgfortran3 to be installed on Linux which seems to be not the case on your system. We recommend to install this package if you want to use the improved calculation features of openLCA. If you are running an Ubuntu system try installing the package with 'apt-get install libgfortran3'
+LibgfortanInfo=aicpLCA uses a native library for improved calculation performance. It requires the package libgfortran3 to be installed on Linux which seems to be not the case on your system. We recommend to install this package if you want to use the improved calculation features of aicpLCA. If you are running an Ubuntu system try installing the package with 'apt-get install libgfortran3'
 Line=Line
 LinkingProperties=Linking properties
 LoadingRepositoryList=Loading repository list
@@ -598,9 +598,9 @@ OpenDatabase=Open database
 OpenEditor=Open editor
 OpenFlow=Open flow
 OpenInEditor=Open in editor
-OpenLCALog=openLCA log
+OpenLCALog=aicpLCA log
 OpenLogFile=Open log file
-OpenPluginManager=Opens the openLCA Plugin Manager
+OpenPluginManager=Opens the aicpLCA Plugin Manager
 OpenProvider=Open provider
 OpenUpdateManager=Open Update Manager
 Other=Other
@@ -786,7 +786,7 @@ SelectADirectory=Select a directory
 SelectAll=Select all
 SelectDataSets=Select data sets
 SelectImportFiles=Select import files
-SelectLanguageNoteMessage=Changes will not take affect until openLCA is restarted
+SelectLanguageNoteMessage=Changes will not take affect until aicpLCA is restarted
 SelectNext=Select next
 SelectObjectPage_Description=Please select the destination and the data sets for the export
 SelectPrevious=Select previous
