--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -116,7 +116,7 @@ CostValue=Valor de cost
 Costs=Costos
 CostsPerUnit=Costos per unitat
 CostsRevenues=Costos/Ingressos
-CouldNotAllocateMemoryError=L' openLCA no ha pogut assignar prou mem\u00F2ria f\u00EDsica per realitzar el c\u00E0lcul. Sispau, ajusta la configuraci\u00F3 de mem\u00F2ria a "Arxiu/Prefer\u00E8ncies" -> Configuraci\u00F3
+CouldNotAllocateMemoryError=L' aicpLCA no ha pogut assignar prou mem\u00F2ria f\u00EDsica per realitzar el c\u00E0lcul. Sispau, ajusta la configuraci\u00F3 de mem\u00F2ria a "Arxiu/Prefer\u00E8ncies" -> Configuraci\u00F3
 CouldNotFindKMLData=No s'han trobat dades KML a l'arxiu. Sisplau, comprova que l'arxiu compleix ambn el format EcoSpold2. Es pot trobar m\u00E9s informaci\u00F3 sobre el format a http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
 CouldNotOpenDatabase=No s'ha pogut obrir la base de dades
 CouldNotOverwriteFile=No s'ha pogut sobreescriure l'arxiu
@@ -151,7 +151,7 @@ Cutoff=Tall
 DBImportNoTarget=Sisplau, obre la base de dades de dest\u00ED de la importaci\u00F3.
 DBImportNoTargetConnectionFailedMessage=No s'ha pogut identificar la versi\u00F3 de la base de dades d'origen
 DBImportUpdateDatabaseQuestion=Per realitzar la importaci\u00F3 \u00E9s necessari actualitzar la base de dades. Vols actualitzar-la?
-DBImportVersionNewerMessage=La base de dades d'origen correspon a una versi\u00F3 m\u00E9s nova d'openLCA
+DBImportVersionNewerMessage=La base de dades d'origen correspon a una versi\u00F3 m\u00E9s nova d'aicpLCA
 DataCollectionPeriod=Per\u00EDode de recollida de dades
 DataCompleteness=Exhaustivitat de les dades
 DataDocumentor=Documentador de dades
@@ -169,11 +169,11 @@ DatabaseContent=Contingut de la base de dades
 DatabaseImport=Importar base de dades
 DatabaseImportDescription=Importa dades des d'una base de dades existent a la base de dades activa
 DatabaseName=Nom de la base de dades
-DatabaseNewerThanThisError=La base de dades seleccionada correspon a una versi\u00F3 m\u00E9s nova d'openLCA.
+DatabaseNewerThanThisError=La base de dades seleccionada correspon a una versi\u00F3 m\u00E9s nova d'aicpLCA.
 DatabaseRenameError=El nom introdu\u00EFt
 DatabaseType=Tipus de base de dades
 DatabaseValidationCompleteNoErrorsWereFound=Validaci\u00F3 de la base de dades completa. No s'han trobat errors.
-DatabaseVersionCheckFailed=No s'ha pogut identificar la versi\u00F3 de la base de dades. \u00C9s una base de dades d'openLCA?
+DatabaseVersionCheckFailed=No s'ha pogut identificar la versi\u00F3 de la base de dades. \u00C9s una base de dades d'aicpLCA?
 DatabaseWasExportedToFile=Base de dades exportada a l'arxiu
 DecimalSeparator=Separador decimal
 DefaultFlowProperty=Propietat de flux per defecte
@@ -257,7 +257,7 @@ FetchingData=Recuperant dades
 File=&Arxiu
 FileAlreadyExists=L'arxiu ha existeix
 FileDoesNotExist=L'arxiu no existeix
-FileImportPage_Description=Sisplau, selecciona els arxius per importar a openLCA
+FileImportPage_Description=Sisplau, selecciona els arxius per importar a aicpLCA
 Files=Arxius
 Filter=Filtre
 FilterByName=Filtrar per nom
@@ -372,7 +372,7 @@ Layout=Disposici\u00F3
 LayoutAs=Disposici\u00F3 com a {0}
 LciaCategoryDescriptionTable=Taula de descripci\u00F3 de categories d'EICV
 LciaResultTable=Taulda de resultats d'EICV
-LibgfortanInfo=openLCA utilitza la llibreria jblas per millorar el rendiment del c\u00E0lcul. Aix\u00F2 requereix que el paquet libgfortran3 estigui instal\u00B7lat a Linux i pot ser que li falti. Recomanem instal\u00B7lar aquest paquet si vols utilitzar les funcions de c\u00E0lcul millorades d'openLCA. Si est\u00E0s utilitzant un sistema Ubuntu, prova instal\u00B7lant el paquet amb "apt-get install libgfortran3".
+LibgfortanInfo=aicpLCA utilitza la llibreria jblas per millorar el rendiment del c\u00E0lcul. Aix\u00F2 requereix que el paquet libgfortran3 estigui instal\u00B7lat a Linux i pot ser que li falti. Recomanem instal\u00B7lar aquest paquet si vols utilitzar les funcions de c\u00E0lcul millorades d'aicpLCA. Si est\u00E0s utilitzant un sistema Ubuntu, prova instal\u00B7lant el paquet amb "apt-get install libgfortran3".
 Line=L\u00EDnia
 Local=Local
 LocalDatabase=Base de dades local
@@ -486,10 +486,10 @@ Open=Obrir
 OpenDatabase=Obrir base de dades
 OpenEditor=Obrir editor
 OpenInEditor=Obrir en l'editor
-OpenLCALog=Registre openLCA
+OpenLCALog=Registre aicpLCA
 OpenLogFile=Obrir arxiu de registre
 OpenMiniatureView=Obrir vista en miniatura
-OpenPluginManager=Obre el Gestor de Plugins d'openLCA
+OpenPluginManager=Obre el Gestor de Plugins d'aicpLCA
 Other=Altres
 OutOfMemory=Mem\u00F2ria insuficient
 Output=Sortida
@@ -611,7 +611,7 @@ Section=Secci\u00F3
 Select=Seleccionar {0}
 SelectADirectory=Seleccionar un directori
 SelectImportFiles=Seleccionar els arxius d'importaci\u00F3
-SelectLanguageNoteMessage=Els canvis no s'aplicaran fins que es reinici\u00EF l'openLCA
+SelectLanguageNoteMessage=Els canvis no s'aplicaran fins que es reinici\u00EF l'aicpLCA
 SelectNext=Seleccionar seg\u00FCent
 SelectObjectPage_Description=Sisplau, selecciona un directori de sortida i selecciona els {0} que vols exportar
 SelectPrevious=Seleccionar anterior
