--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,6 +1,6 @@
 #Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=Ein Ortscode wird ben\u00F6tigt
-AboutOpenLCA=\u00DCber openLCA
+AboutOpenLCA=\u00DCber aicpLCA
 AccessAndUseRestrictions=Zugangs- und Nutzungsbeschr\u00E4nkungen
 ActivityQuantity=Merkmal der Aktivit\u00E4t
 ActivityUnit=Einheit der Aktivit\u00E4t
@@ -126,7 +126,7 @@ CostValue=Wert der Kosten
 Costs=Kosten
 CostsPerUnit=Kosten pro Einheit
 CostsRevenues=Kosten/Einnahmen
-CouldNotAllocateMemoryError=openLCA konnte nicht auf genug physikalischen Speicher zur\u00FCckgreifen. Bitte passen Sie die Speichereinstellungen unter 'Datei -> Benutzervorgaben -> Einstellungen' an.
+CouldNotAllocateMemoryError=aicpLCA konnte nicht auf genug physikalischen Speicher zur\u00FCckgreifen. Bitte passen Sie die Speichereinstellungen unter 'Datei -> Benutzervorgaben -> Einstellungen' an.
 CouldNotFindKMLData=In der Datei konnten keine KML Daten gefunden werden. Passt sie zum EcoSpold2 Format? Mehr Informationen zum Datenformat k\u00F6nnen hier gefunden werden\:\u00A0http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
 CouldNotOpenDatabase=Datenbank konnte nicht ge\u00F6ffnet werden
 CouldNotOverwriteFile=Datei konnte nicht \u00FCberschrieben werden
@@ -162,7 +162,7 @@ Cutoff=Cut-off
 DBImportNoTarget=Sie m\u00FCssen eine Zieldatenbank f\u00FCr den Import \u00F6ffnen.
 DBImportNoTargetConnectionFailedMessage=Die Version der Quelldatenbank konnte nicht ermittelt werden.
 DBImportUpdateDatabaseQuestion=Um den Import zu starten, m\u00FCssen Sie die Quelldatenbank aktualisieren. M\u00F6chten Sie mit der Aktualiserung beginnen?
-DBImportVersionNewerMessage=Die Version der Quelldatenbank ist neuer als diese Version von openLCA.
+DBImportVersionNewerMessage=Die Version der Quelldatenbank ist neuer als diese Version von aicpLCA.
 DataCollectionPeriod=Zeitraum der Datensammlung
 DataCompleteness=Datenvollst\u00E4ndigkeit
 DataDocumentor=Datendokumentierer
@@ -184,11 +184,11 @@ DatabaseContent=Datenbankinhalt
 DatabaseImport=Datenbankimport
 DatabaseImportDescription=Importiert Daten aus einer bestehenden Datenbank in die aktive Datenbank
 DatabaseName=Datenbankname
-DatabaseNewerThanThisError=Die Datenbank ist neuer als diese Version von openLCA.
+DatabaseNewerThanThisError=Die Datenbank ist neuer als diese Version von aicpLCA.
 DatabaseRenameError=Dieser Name ist nicht g\u00FCltig oder eine Datenbank mit diesem Namen existiert bereits.
 DatabaseType=Datenbanktyp
 DatabaseValidationCompleteNoErrorsWereFound=Datenbankvalidierung vollst\u00E4ndig. Es wurden keine Fehler gefunden.
-DatabaseVersionCheckFailed=Die Version der Datenbank konnte nicht ermittelt werden. Handelt es sich um eine openLCA Datenbank?
+DatabaseVersionCheckFailed=Die Version der Datenbank konnte nicht ermittelt werden. Handelt es sich um eine aicpLCA Datenbank?
 DatabaseWasExportedToFile=Die Datenbank wurde als Datei exportiert
 DecimalSeparator=Dezimal-Trennzeichen
 DefaultFlowProperty=Standardflusseigenschaft
@@ -277,7 +277,7 @@ FetchingData=Daten fetchen
 File=&Datei
 FileAlreadyExists=Die Datei existiert bereits
 FileDoesNotExist=Diese Datei kann nicht gefunden werden
-FileImportPage_Description=Bitte w\u00E4hlen Sie die Dateien aus, die Sie nach openLCA importieren m\u00F6chten
+FileImportPage_Description=Bitte w\u00E4hlen Sie die Dateien aus, die Sie nach aicpLCA importieren m\u00F6chten
 Files=Dateien
 Filter=Filter
 FilterByName=Nach Name filtern
@@ -404,7 +404,7 @@ Layout=Layout
 LayoutAs=Als {0} anordnen
 LciaCategoryDescriptionTable=Tabelle mit Beschreibung der LCIA-Kategorien
 LciaResultTable=Wirkungsabsch\u00E4tzungs-Ergebnistabelle
-LibgfortanInfo=openLCA benutzt eine native Mathebibliothek f\u00FCr bessere Rechenleistung. F\u00FCr Linux wird die Installation des Pakets libgfortran3 ben\u00F6tigt, was auf Ihrem System nicht der Fall zu sein scheint. Wir empfehlen dieses Paket zu installieren, wenn Sie von der verbesserten Rechenleistung von openLCA profitieren m\u00F6chten. Wenn Sie ein Ubuntu System benutzen, versuchen Sie das Paket mit\u00A0'apt-get install libgfortran3' zu installieren
+LibgfortanInfo=aicpLCA benutzt eine native Mathebibliothek f\u00FCr bessere Rechenleistung. F\u00FCr Linux wird die Installation des Pakets libgfortran3 ben\u00F6tigt, was auf Ihrem System nicht der Fall zu sein scheint. Wir empfehlen dieses Paket zu installieren, wenn Sie von der verbesserten Rechenleistung von aicpLCA profitieren m\u00F6chten. Wenn Sie ein Ubuntu System benutzen, versuchen Sie das Paket mit\u00A0'apt-get install libgfortran3' zu installieren
 Line=Linie
 Local=Lokal
 LocalDatabase=Lokale Datenbank
@@ -525,10 +525,10 @@ Open=\u00D6ffnen
 OpenDatabase=Datenbank \u00F6ffnen
 OpenEditor=Editor \u00F6ffnen
 OpenInEditor=In Editor \u00F6ffnen
-OpenLCALog=openLCA Log
+OpenLCALog=aicpLCA Log
 OpenLogFile=\u00D6ffne Logdatei
 OpenMiniatureView=\u00D6ffne Miniaturansicht
-OpenPluginManager=\u00D6ffnet den openLCA Plugin Manager
+OpenPluginManager=\u00D6ffnet den aicpLCA Plugin Manager
 Other=Rest
 OutOfMemory=Kein freier Speicher mehr
 Output=Output
