--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -123,7 +123,7 @@ CostValue=Valor de coste
 Costs=Costes
 CostsPerUnit=Costes por unidad
 CostsRevenues=Costes/Ingresos
-CouldNotAllocateMemoryError=openLCA no pudo asignar suficiente memoria f\u00EDsica para realizar el c\u00E1lculo. Por favor, ajuste su configuraci\u00F3n de memoria en 'Archivo/Preferencias' -> Configuraci\u00F3n
+CouldNotAllocateMemoryError=aicpLCA no pudo asignar suficiente memoria f\u00EDsica para realizar el c\u00E1lculo. Por favor, ajuste su configuraci\u00F3n de memoria en 'Archivo/Preferencias' -> Configuraci\u00F3n
 CouldNotFindKMLData=No se encontraron datos KML en el archivo. Por favor, compruebe que el archivo cumple con el formato EcoSpold2. Para m\u00E1s informaci\u00F3n sobre este formato\:\u00A0http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
 CouldNotOpenDatabase=No se pudo abrir la base de datos
 CouldNotOverwriteFile=No se pudo sobrescribir el archivo
@@ -159,7 +159,7 @@ Cutoff=Corte
 DBImportNoTarget=Por favor, abra la base de datos destino de la importaci\u00F3n.
 DBImportNoTargetConnectionFailedMessage=No se pudo identificar la versi\u00F3n de la base de datos de origen.
 DBImportUpdateDatabaseQuestion=Para realizar la importaci\u00F3n es necesario actualizar la base de datos de origen. \u00BFDesea actualizarla?
-DBImportVersionNewerMessage=La base de datos de origen corresponde a una versi\u00F3n m\u00E1s nueva de openLCA.
+DBImportVersionNewerMessage=La base de datos de origen corresponde a una versi\u00F3n m\u00E1s nueva de aicpLCA.
 DataCollectionPeriod=Per\u00EDodo de recogida de datos
 DataCompleteness=Exhaustividad de los datos
 DataDocumentor=Documentador de datos
@@ -181,11 +181,11 @@ DatabaseContent=Contenido de la base de datos
 DatabaseImport=Importar base de datos
 DatabaseImportDescription=Importa datos desde una base de datos existente a la base de datos activa
 DatabaseName=Nombre de la base de datos
-DatabaseNewerThanThisError=La base de datos seleccionada corresponde a una versi\u00F3n m\u00E1s nueva de openLCA.
+DatabaseNewerThanThisError=La base de datos seleccionada corresponde a una versi\u00F3n m\u00E1s nueva de aicpLCA.
 DatabaseRenameError=El nombre introducido no es v\u00E1lido o una base de datos con el mismo nombre ya existe.
 DatabaseType=Tipo de base de datos
 DatabaseValidationCompleteNoErrorsWereFound=Validaci\u00F3n de la base de datos completada. No se han encontrado errores.
-DatabaseVersionCheckFailed=No se pudo identificar la versi\u00F3n de la base de datos. \u00BFEs esta una base de datos de openLCA?
+DatabaseVersionCheckFailed=No se pudo identificar la versi\u00F3n de la base de datos. \u00BFEs esta una base de datos de aicpLCA?
 DatabaseWasExportedToFile=Base de datos exportada al archivo
 DecimalSeparator=Separador decimal
 DefaultFlowProperty=Propiedad de flujo por defecto
@@ -273,7 +273,7 @@ FetchingData=Integrando datos
 File=&Archivo
 FileAlreadyExists=El archivo ya existe
 FileDoesNotExist=El archivo no existe
-FileImportPage_Description=Por favor, seleccione los archivos para importar a openLCA
+FileImportPage_Description=Por favor, seleccione los archivos para importar a aicpLCA
 Files=Archivos
 Filter=Filtro
 FilterByName=Filtrar por nombre
@@ -400,7 +400,7 @@ Layout=Disposici\u00F3n
 LayoutAs=Disposici\u00F3n como {0}
 LciaCategoryDescriptionTable=Tabla de descripci\u00F3n de categor\u00EDas de EICV
 LciaResultTable=Tabla de resultados de EICV
-LibgfortanInfo=openLCA utiliza la librer\u00EDa jblas para mejorar el rendimiento de c\u00E1lculo. Esto requiere que el paquete libgfortran3 est\u00E9 instalado en Linux y puede que falte en su sistema. Recomendamos instalar este paquete si quiere usar las funciones de c\u00E1lculo mejoradas de openLCA. Si est\u00E1 usando un sistema Ubuntu, pruebe instalando el paquete con\u00A0'apt-get install libgfortran3'.
+LibgfortanInfo=aicpLCA utiliza la librer\u00EDa jblas para mejorar el rendimiento de c\u00E1lculo. Esto requiere que el paquete libgfortran3 est\u00E9 instalado en Linux y puede que falte en su sistema. Recomendamos instalar este paquete si quiere usar las funciones de c\u00E1lculo mejoradas de aicpLCA. Si est\u00E1 usando un sistema Ubuntu, pruebe instalando el paquete con\u00A0'apt-get install libgfortran3'.
 Line=L\u00EDnea
 Local=Local
 LocalDatabase=Base de datos local
@@ -521,10 +521,10 @@ Open=Abrir
 OpenDatabase=Abrir base de datos
 OpenEditor=Abrir editor
 OpenInEditor=Abrir en editor
-OpenLCALog=Registro openLCA
+OpenLCALog=Registro aicpLCA
 OpenLogFile=Abrir archivo de registro
 OpenMiniatureView=Abrir vista en miniatura
-OpenPluginManager=Abre el Gestor de Plugins de openLCA
+OpenPluginManager=Abre el Gestor de Plugins de aicpLCA
 Other=Otros
 OutOfMemory=Memoria insuficiente
 Output=Salida
@@ -674,7 +674,7 @@ Select=Seleccionar {0}
 SelectADirectory=Seleccionar un directorio
 SelectAll=Seleccionar todo
 SelectImportFiles=Seleccionar los archivos de importaci\u00F3n
-SelectLanguageNoteMessage=Los cambios no se aplicar\u00E1n hasta que openLCA sea reiniciado
+SelectLanguageNoteMessage=Los cambios no se aplicar\u00E1n hasta que aicpLCA sea reiniciado
 SelectNext=Seleccionar siguiente
 SelectObjectPage_Description=Por favor, seleccione un directorio de salida y seleccione los {0} que desea exportar
 SelectPrevious=Seleccionar anterior
