--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -162,7 +162,7 @@ Cutoff=Limite
 DBImportNoTarget=Vous devez ouvrir une base de donn\u00E9es cible pour l'import.
 DBImportNoTargetConnectionFailedMessage=Impossible de d\u00E9terminer la version de la base de donn\u00E9es source.
 DBImportUpdateDatabaseQuestion=Pour lancer l'import, vous devez mettre \u00E0 jour la base de donn\u00E9es source. Voulez-vous continuer ?
-DBImportVersionNewerMessage=La version de la base de donn\u00E9es source est plus r\u00E9cente que cette version d'openLCA.
+DBImportVersionNewerMessage=La version de la base de donn\u00E9es source est plus r\u00E9cente que cette version d'aicpLCA.
 DataCollectionPeriod=P\u00E9riode de collecte des donn\u00E9es
 DataCompleteness=Exhaustivit\u00E9 des donn\u00E9es
 DataDocumentor=Documentateur des donn\u00E9es
@@ -184,11 +184,11 @@ DatabaseContent=Contenu de base de donn\u00E9es
 DatabaseImport=Import de base de donn\u00E9es
 DatabaseImportDescription=Importe des donn\u00E9es \u00E0 partir d'une base de donn\u00E9es existante dans la base de donn\u00E9es active
 DatabaseName=Nom de la base de donn\u00E9es
-DatabaseNewerThanThisError=Cette base de donn\u00E9es est plus r\u00E9cente que cette version openLCA.
+DatabaseNewerThanThisError=Cette base de donn\u00E9es est plus r\u00E9cente que cette version aicpLCA.
 DatabaseRenameError=Ce nom n'est pas valide, ou une base de donn\u00E9es avec ce nom existe d\u00E9j\u00E0.
 DatabaseType=Type de base de donn\u00E9es
 DatabaseValidationCompleteNoErrorsWereFound=Validation de la base de donn\u00E9es termin\u00E9e. Aucune erreur trouv\u00E9e
-DatabaseVersionCheckFailed=Impossible de d\u00E9terminer la version de la base de donn\u00E9es. Est-ce bien une base de donn\u00E9es openLCA ?
+DatabaseVersionCheckFailed=Impossible de d\u00E9terminer la version de la base de donn\u00E9es. Est-ce bien une base de donn\u00E9es aicpLCA ?
 DatabaseWasExportedToFile=La base de donn\u00E9es a \u00E9t\u00E9 export\u00E9e dans un fichier
 DecimalSeparator=S\u00E9parateur d\u00E9cimal
 DefaultFlowProperty=Propri\u00E9t\u00E9 de flux par d\u00E9faut
@@ -280,7 +280,7 @@ FetchingData=r\u00E9cup\u00E9ration des donn\u00E9es
 File=&Fichier
 FileAlreadyExists=Le fichier existe d\u00E9j\u00E0
 FileDoesNotExist=Le fichier n'existe pas
-FileImportPage_Description=Veuillez s\u00E9lectionner les fichiers \u00E0 importer dans openLCA
+FileImportPage_Description=Veuillez s\u00E9lectionner les fichiers \u00E0 importer dans aicpLCA
 Files=Fichiers
 Filter=Filtre
 FilterByName=Filtrer par nom
@@ -529,10 +529,10 @@ Open=Ouvrir
 OpenDatabase=Ouvrir la base de donn\u00E9es
 OpenEditor=Ouvrir l'\u00E9diteur
 OpenInEditor=Ouvrir dans l'\u00E9diteur
-OpenLCALog=Log openLCA
+OpenLCALog=Log aicpLCA
 OpenLogFile=Ouvrez le fichier log
 OpenMiniatureView=Ouvrir une vue miniature
-OpenPluginManager=Ouvrez le gestionnaire de plugin openLCA
+OpenPluginManager=Ouvrez le gestionnaire de plugin aicpLCA
 Other=Autres
 OutOfMemory=M\u00E9moire insuffisante
 Output=Sortie
@@ -684,7 +684,7 @@ Select=S\u00E9lectionner {0}
 SelectADirectory=S\u00E9lectionner un r\u00E9pertoire
 SelectAll=Tous s\u00E9lectionner
 SelectImportFiles=S\u00E9lectionnez les fichiers d'importation
-SelectLanguageNoteMessage=Les modifications ne prendront effet qu'apr\u00E8s le red\u00E9marrage d'openLCA
+SelectLanguageNoteMessage=Les modifications ne prendront effet qu'apr\u00E8s le red\u00E9marrage d'aicpLCA
 SelectNext=s\u00E9lectionner suivant
 SelectObjectPage_Description=Veuillez sp\u00E9cifier un r\u00E9pertoire de sortie et s\u00E9lectionner le {0} que vous souhaitez exporter
 SelectPrevious=s\u00E9lectionner pr\u00E9c\u00E9dent
