--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -123,7 +123,7 @@ CostValue=K\u00F6lts\u00E9g\u00E9rt\u00E9k
 Costs=K\u00F6lts\u00E9gek
 CostsPerUnit=Egys\u00E9gk\u00F6lts\u00E9g
 CostsRevenues=K\u00F6lts\u00E9gek/Bev\u00E9telek
-CouldNotAllocateMemoryError=Az openLCA nem tudott el\u00E9g fizikai mem\u00F3ri\u00E1t allok\u00E1lni a sz\u00E1mt\u00E1s elv\u00E9gz\u00E9s\u00E9hez. V\u00E9gezzel el a mem\u00F3ria be\u00E1ll\u00EDt\u00E1sait A 'F\u00E1jl/Tulajdons\u00E1gok' -> Be\u00E1ll\u00EDt\u00E1sok men\u00FCben
+CouldNotAllocateMemoryError=Az aicpLCA nem tudott el\u00E9g fizikai mem\u00F3ri\u00E1t allok\u00E1lni a sz\u00E1mt\u00E1s elv\u00E9gz\u00E9s\u00E9hez. V\u00E9gezzel el a mem\u00F3ria be\u00E1ll\u00EDt\u00E1sait A 'F\u00E1jl/Tulajdons\u00E1gok' -> Be\u00E1ll\u00EDt\u00E1sok men\u00FCben
 CouldNotFindKMLData=A megnyitott f\u00E1jlban nem siker\u00FClt KML adatokat tal\u00E1lni. Ellen\u0151rizze, hogy a f\u00E1jl megfelel-e az EcoSpold2 form\u00E1tumnak\! Tov\u00E1bbi inform\u00E1ci\u00F3 a form\u00E1tumr\u00F3l az al\u00E1bbi linken tal\u00E1lhat\u00F3\: http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
 CouldNotOpenDatabase=Nem siker\u00FClt megnyitni az adatb\u00E1zist
 CouldNotOverwriteFile=Nem siker\u00FClt fel\u00FCl\u00EDrni a f\u00E1jlt
@@ -159,7 +159,7 @@ Cutoff=Kiv\u00E1g\u00E1s
 DBImportNoTarget=Az import\u00E1l\u00E1shoz meg kell nyitnia egy c\u00E9l adatb\u00E1zist.
 DBImportNoTargetConnectionFailedMessage=Nem siker\u00FClt az adatb\u00E1zis verzi\u00F3j\u00E1t megtal\u00E1lni.
 DBImportUpdateDatabaseQuestion=Az import\u00E1l\u00E1shoz friss\u00EDteni kell a forr\u00E1s adatb\u00E1zist. Szeretn\u00E9 most friss\u00EDteni?
-DBImportVersionNewerMessage=A forr\u00E1sadatb\u00E1zis verzi\u00F3ja \u00FAjabb, mint a jelen openLCA verzi\u00F3ja.
+DBImportVersionNewerMessage=A forr\u00E1sadatb\u00E1zis verzi\u00F3ja \u00FAjabb, mint a jelen aicpLCA verzi\u00F3ja.
 DataCollectionPeriod=Adatgy\u0171jt\u00E9s id\u0151tartama
 DataCompleteness=Adatok teljess\u00E9ge
 DataDocumentor=Adatbevitelt v\u00E9gz\u0151
@@ -181,11 +181,11 @@ DatabaseContent=Adatb\u00E1zis tartalom
 DatabaseImport=Adatb\u00E1zis import
 DatabaseImportDescription=Adatokat import\u00E1l egy megl\u00E9v\u0151 adatb\u00E1zisb\u00F3l a megnyitott adatb\u00E1zisba
 DatabaseName=Adatb\u00E1zis neve
-DatabaseNewerThanThisError=A kijel\u00F6lt adatb\u00E1zis \u00FAjabb, mint az openLCA jelen verzi\u00F3ja.
+DatabaseNewerThanThisError=A kijel\u00F6lt adatb\u00E1zis \u00FAjabb, mint az aicpLCA jelen verzi\u00F3ja.
 DatabaseRenameError=Az adott n\u00E9v nem \u00E9rv\u00E9nyes vagy m\u00E1r l\u00E9tezik ilyen nev\u0171 adatb\u00E1zis.
 DatabaseType=Adatb\u00E1zis t\u00EDpusa
 DatabaseValidationCompleteNoErrorsWereFound=Adatb\u00E1zis ellen\u0151rz\u00E9se k\u00E9sz. Nem t\u00F6rt\u00E9nt hiba.
-DatabaseVersionCheckFailed=Nem siker\u00FClt az adatb\u00E1zis verzi\u00F3j\u00E1t megtal\u00E1lni. Biztos, hogy ez egy openLCA adatb\u00E1zis?
+DatabaseVersionCheckFailed=Nem siker\u00FClt az adatb\u00E1zis verzi\u00F3j\u00E1t megtal\u00E1lni. Biztos, hogy ez egy aicpLCA adatb\u00E1zis?
 DatabaseWasExportedToFile=Az adatb\u00E1zist f\u00E1jlba export\u00E1l\u00E1sa megt\u00F6rt\u00E9nt.
 DecimalSeparator=Tizedesjel
 DefaultFlowProperty=Alap\u00E9rtelmezett \u00E1ram tulajdons\u00E1g
@@ -273,7 +273,7 @@ FetchingData=Adatok let\u00F6lt\u00E9se
 File=&F\u00E1jl
 FileAlreadyExists=A f\u00E1jl m\u00E1r l\u00E9tezik
 FileDoesNotExist=A f\u00E1jl nem l\u00E9tezik
-FileImportPage_Description=V\u00E1lassza ki a f\u00E1jlokat az openLCA-ba import\u00E1l\u00E1sra
+FileImportPage_Description=V\u00E1lassza ki a f\u00E1jlokat az aicpLCA-ba import\u00E1l\u00E1sra
 Files=F\u00E1jlok
 Filter=Sz\u0171r\u0151
 FilterByName=Sz\u0171r\u00E9s n\u00E9v szerint
@@ -400,7 +400,7 @@ Layout=Elrendez\u00E9s
 LayoutAs=Elrendez\u00E9s eszerint\: {0}
 LciaCategoryDescriptionTable=LCIA kateg\u00F3ria le\u00EDr\u00F3 t\u00E1bl\u00E1zata
 LciaResultTable=LCIA eredm\u00E9nyt\u00E1bl\u00E1zat
-LibgfortanInfo=Az openLCA a jblas f\u00FCggv\u00E9nygy\u0171jtem\u00E9nyt haszn\u00E1lja a jobb sz\u00E1m\u00EDt\u00E1si teljes\u00EDtm\u00E9ny \u00E9rdek\u00E9ben. Ehhez Linuxon a libgfortran3 programcsomagot kell telep\u00EDteni, ami az \u00D6n rendszer\u00E9n \u00FAgy t\u0171nik, nem el\u00E9rhet\u0151. Ha jobb sz\u00E1m\u00EDt\u00E1si teljes\u00EDtm\u00E9nyt szeretne el\u00E9rni, javasolt ennek a programcsomagnak a telep\u00EDt\u00E9se. Ha Ubuntu rendszert haszn\u00E1l, ezt az 'apt-get install libgfortran3' paranccsal teheti meg.
+LibgfortanInfo=Az aicpLCA a jblas f\u00FCggv\u00E9nygy\u0171jtem\u00E9nyt haszn\u00E1lja a jobb sz\u00E1m\u00EDt\u00E1si teljes\u00EDtm\u00E9ny \u00E9rdek\u00E9ben. Ehhez Linuxon a libgfortran3 programcsomagot kell telep\u00EDteni, ami az \u00D6n rendszer\u00E9n \u00FAgy t\u0171nik, nem el\u00E9rhet\u0151. Ha jobb sz\u00E1m\u00EDt\u00E1si teljes\u00EDtm\u00E9nyt szeretne el\u00E9rni, javasolt ennek a programcsomagnak a telep\u00EDt\u00E9se. Ha Ubuntu rendszert haszn\u00E1l, ezt az 'apt-get install libgfortran3' paranccsal teheti meg.
 Line=Vonal
 Local=Helyi
 LocalDatabase=Helyi adatb\u00E1zis
@@ -521,10 +521,10 @@ Open=Megnyit\u00E1s
 OpenDatabase=Adatb\u00E1zis megnyit\u00E1sa
 OpenEditor=Szerkeszt\u0151 megnyit\u00E1sa
 OpenInEditor=Megnyit\u00E1s szerkeszt\u0151ben
-OpenLCALog=openLCA napl\u00F3f\u00E1jl
+OpenLCALog=aicpLCA napl\u00F3f\u00E1jl
 OpenLogFile=Napl\u00F3f\u00E1jl megnyit\u00E1sa
 OpenMiniatureView=Mini n\u00E9zet megnyit\u00E1sa
-OpenPluginManager=Megnyitja az openLCA Kieg\u00E9sz\u00EDt\u0151-kezel\u0151t
+OpenPluginManager=Megnyitja az aicpLCA Kieg\u00E9sz\u00EDt\u0151-kezel\u0151t
 Other=Egy\u00E9b
 OutOfMemory=Kev\u00E9s a mem\u00F3ria
 Output=Kimenet
@@ -672,7 +672,7 @@ Select={0} kiv\u00E1laszt\u00E1sa
 SelectADirectory=K\u00F6nyvt\u00E1r v\u00E1laszt\u00E1s
 SelectAll=Mindet kiv\u00E1laszt
 SelectImportFiles=F\u00E1jlok kiv\u00E1laszt\u00E1sa import\u00E1l\u00E1shoz
-SelectLanguageNoteMessage=A v\u00E1ltoztat\u00E1sok az openLCA \u00FAjraind\u00EDt\u00E1sa ut\u00E1n l\u00E9pnek \u00E9letbe
+SelectLanguageNoteMessage=A v\u00E1ltoztat\u00E1sok az aicpLCA \u00FAjraind\u00EDt\u00E1sa ut\u00E1n l\u00E9pnek \u00E9letbe
 SelectNext=K\u00F6vetkez\u0151 kiv\u00E1laszt\u00E1sa
 SelectObjectPage_Description=Adjon meg egy c\u00E9lk\u00F6nyvt\u00E1rat \u00E9s v\u00E1lassza ki azt a {0} elemet, amit export\u00E1lni szeretne
 SelectPrevious=El\u0151z\u0151 kiv\u00E1laszt\u00E1sa
