--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -117,7 +117,7 @@ CostValue=Valore di costo
 Costs=Costi
 CostsPerUnit=Costi per unit\u00E0
 CostsRevenues=Costi/Ricavi
-CouldNotAllocateMemoryError=openLCA non pu\u00F2 allocare sufficiente memoria fisica per procedere con il calcolo. Verificare le impostazioni della memoria nel men\u00F9 'File/Preferenze' -> Configurazione
+CouldNotAllocateMemoryError=aicpLCA non pu\u00F2 allocare sufficiente memoria fisica per procedere con il calcolo. Verificare le impostazioni della memoria nel men\u00F9 'File/Preferenze' -> Configurazione
 CouldNotFindKMLData=Impossibile trovare dati in formato KML nel file. Si \u00E8 sicuri che sia compatibile con il formato EcoSpold2? Ulteriori informazioni sul formato sono disponibili all'indirizzo\u00A0http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
 CouldNotOpenDatabase=Impossibile aprire il database
 CouldNotOverwriteFile=Impossibile sovrascrivere il file
@@ -153,7 +153,7 @@ Cutoff=Cut-off
 DBImportNoTarget=Devi aprire il database in cui importare i dati.
 DBImportNoTargetConnectionFailedMessage=Impossibile determinare la versione del database sorgente.
 DBImportUpdateDatabaseQuestion=Per poter avviare il processo di importazione devi prima aggiornare il database sorgente. Vuoi procedere con l'aggiornamento?
-DBImportVersionNewerMessage=La versione del database sorgente \u00E8 pi\u00F9 recente della versione di openLCA in uso.
+DBImportVersionNewerMessage=La versione del database sorgente \u00E8 pi\u00F9 recente della versione di aicpLCA in uso.
 DataCollectionPeriod=Periodo di raccolta dei dati
 DataCompleteness=Completezza dei dati
 DataDocumentor=Documentatore dei dati
@@ -174,11 +174,11 @@ DatabaseContent=Contenuto del database
 DatabaseImport=Importa database
 DatabaseImportDescription=Importa dati provenienti da un database esistente all'interno del database attivo
 DatabaseName=Nome del database
-DatabaseNewerThanThisError=Il database \u00E8 pi\u00F9 recente della versione di openLCA in uso.
+DatabaseNewerThanThisError=Il database \u00E8 pi\u00F9 recente della versione di aicpLCA in uso.
 DatabaseRenameError=Il nome scelto non \u00E8 valido o esiste gi\u00E0 un database con lo stesso nome.
 DatabaseType=Tipo di database
 DatabaseValidationCompleteNoErrorsWereFound=Validazione del database completata. Non sono stati trovati errori.
-DatabaseVersionCheckFailed=Impossibile determinare la versione del database. Sei sicuro che sia un database in formato openLCA?
+DatabaseVersionCheckFailed=Impossibile determinare la versione del database. Sei sicuro che sia un database in formato aicpLCA?
 DatabaseWasExportedToFile=Il database \u00E8 stato esportato
 DecimalSeparator=Separatore decimale
 DefaultFlowProperty=Propriet\u00E0 predefinita del flusso
@@ -265,7 +265,7 @@ FetchingData=Recupero dei dati
 File=&File
 FileAlreadyExists=Il file esiste gi\u00E0
 FileDoesNotExist=Il file non esiste
-FileImportPage_Description=Scegli i files da importare in openLCA
+FileImportPage_Description=Scegli i files da importare in aicpLCA
 Files=Files
 Filter=Filtra
 FilterByName=Filtra per nome
@@ -386,7 +386,7 @@ Layout=Layout
 LayoutAs=Layout come {0}
 LciaCategoryDescriptionTable=Tabella di descrizione delle categorie LCIA
 LciaResultTable=Tabella dei risultati dell'LCIA
-LibgfortanInfo=openLCA utilizza la libreria jblas per migliorare le prestazioni del calcolo. Per tale motivo \u00E8 richiesto che nel sistema Linux sia installato il pacchetto libgfortran3. Pertanto, se si vogliono sfruttare a pieno le potenzialit\u00E0 di calcolo di openLCA, si raccomanda di installare tale pacchetto. Se si sta utilizzando una distribuzione Ubuntu, si consiglia di installare il pacchetto tramite il comando\u00A0'apt-get install libgfortran3'
+LibgfortanInfo=aicpLCA utilizza la libreria jblas per migliorare le prestazioni del calcolo. Per tale motivo \u00E8 richiesto che nel sistema Linux sia installato il pacchetto libgfortran3. Pertanto, se si vogliono sfruttare a pieno le potenzialit\u00E0 di calcolo di aicpLCA, si raccomanda di installare tale pacchetto. Se si sta utilizzando una distribuzione Ubuntu, si consiglia di installare il pacchetto tramite il comando\u00A0'apt-get install libgfortran3'
 Line=Linea
 Local=Locale
 LocalDatabase=Database locale
@@ -506,10 +506,10 @@ Open=Apri
 OpenDatabase=Apri database
 OpenEditor=Apri l'editor
 OpenInEditor=Apri nell'editor
-OpenLCALog=Log di openLCA
+OpenLCALog=Log di aicpLCA
 OpenLogFile=Apri file di log
 OpenMiniatureView=Apri in vista miniatura
-OpenPluginManager=Apri il gestore dei plugins di openLCA
+OpenPluginManager=Apri il gestore dei plugins di aicpLCA
 Other=Altro
 OutOfMemory=Memoria insufficiente
 Output=Output
@@ -656,7 +656,7 @@ Select=Seleziona {0}
 SelectADirectory=Seleziona una directory
 SelectAll=Seleziona tutto
 SelectImportFiles=Selezione dei files da importare
-SelectLanguageNoteMessage=Le modifiche avranno effetto solo dopo il riavvio di openLCA
+SelectLanguageNoteMessage=Le modifiche avranno effetto solo dopo il riavvio di aicpLCA
 SelectNext=Seleziona il successivo
 SelectObjectPage_Description=Specificare una directory di output e selezionare il {0} che si vuole esportare
 SelectPrevious=Seleziona il precedente
