--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -123,7 +123,7 @@ CostValue=Valor de custo
 Costs=Custos
 CostsPerUnit=Custo por unidade
 CostsRevenues=Custos / receitas
-CouldNotAllocateMemoryError=O openLCA n\u00E3o p\u00F4de alocar mem\u00F3ria f\u00EDsica suficiente para executar o c\u00E1lculo. Por favor, ajuste as configura\u00E7\u00F5es de mem\u00F3ria em "Arquivo / Prefer\u00EAncias" -> Configura\u00E7\u00E3o
+CouldNotAllocateMemoryError=O aicpLCA n\u00E3o p\u00F4de alocar mem\u00F3ria f\u00EDsica suficiente para executar o c\u00E1lculo. Por favor, ajuste as configura\u00E7\u00F5es de mem\u00F3ria em "Arquivo / Prefer\u00EAncias" -> Configura\u00E7\u00E3o
 CouldNotFindKMLData=N\u00E3o foi poss\u00EDvel encontrar dados KML no arquivo que voc\u00EA forneceu. Ele \u00E9 compat\u00EDvel com o formato EcoSpold2? Mais informa\u00E7\u00F5es sobre o formato podem ser encontradas em\: http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2
 CouldNotOpenDatabase=N\u00E3o foi poss\u00EDvel abrir o banco de dados
 CouldNotOverwriteFile=N\u00E3o foi poss\u00EDvel substituir o arquivo
@@ -159,7 +159,7 @@ Cutoff=Crit\u00E9rio de corte
 DBImportNoTarget=Voc\u00EA precisa abrir um banco de dados de destino para importa\u00E7\u00E3o.
 DBImportNoTargetConnectionFailedMessage=N\u00E3o foi poss\u00EDvel obter a vers\u00E3o do banco de dados de origem.
 DBImportUpdateDatabaseQuestion=Para executar a importa\u00E7\u00E3o voc\u00EA precisa atualizar o banco de dados de origem. Voc\u00EA quer fazer isso?
-DBImportVersionNewerMessage=A vers\u00E3o do banco de dados de origem \u00E9 mais recente do que esta vers\u00E3o do openLCA.
+DBImportVersionNewerMessage=A vers\u00E3o do banco de dados de origem \u00E9 mais recente do que esta vers\u00E3o do aicpLCA.
 DataCollectionPeriod=Per\u00EDodo de coleta de dados
 DataCompleteness=Integridade dos dados
 DataDocumentor=Documenta\u00E7\u00E3o
@@ -181,11 +181,11 @@ DatabaseContent=Conte\u00FAdo do banco de dados
 DatabaseImport=Importar base de dados
 DatabaseImportDescription=Importa dados, de um banco de dados existente para um banco de dados ativo
 DatabaseName=Nome do banco de dados
-DatabaseNewerThanThisError=O determinado banco de dados \u00E9 mais novo que esta vers\u00E3o openLCA.
+DatabaseNewerThanThisError=O determinado banco de dados \u00E9 mais novo que esta vers\u00E3o aicpLCA.
 DatabaseRenameError=O nome n\u00E3o \u00E9 v\u00E1lido ou j\u00E1 existe um banco de dados com este nome.
 DatabaseType=Tipo de base de dados
 DatabaseValidationCompleteNoErrorsWereFound=Valida\u00E7\u00E3o do banco de dados conclu\u00EDda. Nenhum erro foi encontrado.
-DatabaseVersionCheckFailed=N\u00E3o foi poss\u00EDvel obter a vers\u00E3o do banco de dados. Este \u00E9 um banco de dados openLCA?
+DatabaseVersionCheckFailed=N\u00E3o foi poss\u00EDvel obter a vers\u00E3o do banco de dados. Este \u00E9 um banco de dados aicpLCA?
 DatabaseWasExportedToFile=Banco de dados foi exportado para arquivo
 DecimalSeparator=Separador decimal
 DefaultFlowProperty=Propriedade de fluxo padr\u00E3o
@@ -273,7 +273,7 @@ FetchingData=Buscando dados
 File=&Arquivo
 FileAlreadyExists=O arquivo j\u00E1 existe
 FileDoesNotExist=Arquivo n\u00E3o existe
-FileImportPage_Description=Por favor, selecione os arquivos para importar para o openLCA
+FileImportPage_Description=Por favor, selecione os arquivos para importar para o aicpLCA
 Files=Arquivos
 Filter=Filtro
 FilterByName=Filtrar por nome
@@ -400,7 +400,7 @@ Layout=Layout
 LayoutAs=Layout como {0}
 LciaCategoryDescriptionTable=AICV tabela de descri\u00E7\u00E3o da categoria
 LciaResultTable=Tabela de resultado AICV
-LibgfortanInfo=O openLCA usa a biblioteca 'jblas' para melhorar o desempenho de c\u00E1lculo. Ela requer o pacote 'libgfortran3'\u00A0\u00A0para ser instalado no Linux, que parece n\u00E3o ser o caso do seu sistema.\u00A0Recomendamos instalar este pacote se voc\u00EA quiser usar os recursos de c\u00E1lculo aperfei\u00E7oado pelo openLCA. Se voc\u00EA estiver executando um sistema Ubuntu tente instalar o pacote com\u00A0'apt-get install libgfortran3'
+LibgfortanInfo=O aicpLCA usa a biblioteca 'jblas' para melhorar o desempenho de c\u00E1lculo. Ela requer o pacote 'libgfortran3'\u00A0\u00A0para ser instalado no Linux, que parece n\u00E3o ser o caso do seu sistema.\u00A0Recomendamos instalar este pacote se voc\u00EA quiser usar os recursos de c\u00E1lculo aperfei\u00E7oado pelo aicpLCA. Se voc\u00EA estiver executando um sistema Ubuntu tente instalar o pacote com\u00A0'apt-get install libgfortran3'
 Line=Linha
 Local=Local
 LocalDatabase=Base de dados local
@@ -521,10 +521,10 @@ Open=Aberto
 OpenDatabase=Abrir base de dados
 OpenEditor=Abrir editor
 OpenInEditor=Abrir no editor
-OpenLCALog=Registro do openLCA\u00A0
+OpenLCALog=Registro do aicpLCA\u00A0
 OpenLogFile=Abrir arquivo de registro
 OpenMiniatureView=Abrir a visualiza\u00E7\u00E3o em miniatura
-OpenPluginManager=Abre o gerenciador de plugin do openLCA\u00A0
+OpenPluginManager=Abre o gerenciador de plugin do aicpLCA\u00A0
 Other=Outros
 OutOfMemory=Fora da mem\u00F3ria
 Output=Sa\u00EDda
@@ -672,7 +672,7 @@ Select=Selecionar\u00A0{0}
 SelectADirectory=Escolha um diret\u00F3rio
 SelectAll=Selecionar todos
 SelectImportFiles=Selecionar arquivos para importa\u00E7\u00E3o
-SelectLanguageNoteMessage=As altera\u00E7\u00F5es n\u00E3o ter\u00E3o efeito at\u00E9 openLCA ser reiniciado
+SelectLanguageNoteMessage=As altera\u00E7\u00F5es n\u00E3o ter\u00E3o efeito at\u00E9 aicpLCA ser reiniciado
 SelectNext=Pr\u00F3xima sele\u00E7\u00E3o
 SelectObjectPage_Description=Por favor, especifique um diret\u00F3rio de sa\u00EDda e selecione o {0} que voc\u00EA deseja exportar
 SelectPrevious=Selecionar anterior
