--- a/olca-app/src/org/openlca/app/messages_zh.properties
+++ b/olca-app/src/org/openlca/app/messages_zh.properties
@@ -123,7 +123,7 @@ CostValue=\u6210\u672C\u50F9\u503C
 Costs=\u6210\u672C
 CostsPerUnit=\u55AE\u4F4D\u6210\u672C
 CostsRevenues=\u6210\u672C/\u6536\u5165
-CouldNotAllocateMemoryError=openLCA\u4E0D\u80FD\u5B9A\u5740\u5230\u66F4\u591A\u7684\u5BE6\u9AD4\u8A18\u61B6\u9AD4\u53BB\u9032\u884C\u8A08\u7B97\u3002\u8ACB\u8ABF\u6574\u4F60\u7684\u8A18\u61B6\u9AD4\u8A2D\u5B9A( \u6A94\u6848/\u504F\u597D -> \u8A2D\u5B9A)
+CouldNotAllocateMemoryError=aicpLCA\u4E0D\u80FD\u5B9A\u5740\u5230\u66F4\u591A\u7684\u5BE6\u9AD4\u8A18\u61B6\u9AD4\u53BB\u9032\u884C\u8A08\u7B97\u3002\u8ACB\u8ABF\u6574\u4F60\u7684\u8A18\u61B6\u9AD4\u8A2D\u5B9A( \u6A94\u6848/\u504F\u597D -> \u8A2D\u5B9A)
 CouldNotFindKMLData=\u4F60\u63D0\u4F9B\u7684\u6A94\u6848\u7121\u6CD5\u627E\u5230KML\u8CC7\u6599\uFF0C\u60A8\u78BA\u5B9A\u5B83\u662FEcoSpold2\u683C\u5F0F\u55CE\uFF1F\u66F4\u8A73\u7D30\u8CC7\u8A0A\u53EF\u4EE5\u524D\u5F80http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2\u4E86\u89E3\u3002
 CouldNotOpenDatabase=\u7121\u6CD5\u6253\u958B\u8CC7\u6599\u5EAB
 CouldNotOverwriteFile=\u7121\u6CD5\u8986\u5BEB\u6A94\u6848
@@ -400,7 +400,7 @@ Layout=\u7248\u9762\u914D\u7F6E
 LayoutAs=\u7248\u9762\u914D\u7F6E\u70BA{0}
 LciaCategoryDescriptionTable=LCIA \u985E\u5225\u8AAA\u660E\u8868\u683C
 LciaResultTable=LCIA \u7D50\u679C\u8868\u683C
-LibgfortanInfo=openLCA\u4F7F\u7528jblas\u51FD\u6578\u5EAB\u9A57\u8B49\u8A08\u7B97\u6548\u80FD\uFF0C\u4F7F\u7528Linux\u5FC5\u9700\u8981\u5B89\u88DDlibgfortran3\u5957\u4EF6\uFF0C\u5982\u679C\u4F60\u4F7F\u7528Ubuntu\u53EF\u4EE5\u5229\u7528\u547D\u4EE4\u5B89\u88DD\u5957\u4EF6'apt-get install libgfortran3'
+LibgfortanInfo=aicpLCA\u4F7F\u7528jblas\u51FD\u6578\u5EAB\u9A57\u8B49\u8A08\u7B97\u6548\u80FD\uFF0C\u4F7F\u7528Linux\u5FC5\u9700\u8981\u5B89\u88DDlibgfortran3\u5957\u4EF6\uFF0C\u5982\u679C\u4F60\u4F7F\u7528Ubuntu\u53EF\u4EE5\u5229\u7528\u547D\u4EE4\u5B89\u88DD\u5957\u4EF6'apt-get install libgfortran3'
 Line=\u884C
 Local=\u672C\u5730
 LocalDatabase=\u672C\u5730\u8CC7\u6599\u5EAB
