--- a/olca-app-html/src/home/msg/messages_it.properties
+++ b/olca-app-html/src/home/msg/messages_it.properties
@@ -1,8 +1,8 @@
 community.link=Ti raccomandiamo di consultare il <a id="forum">forum</a> e ti invitiamo a collegarti e partecipare attivamente al nostro <a id="linkedin">gruppo LinkedIn</a>.
-community.text=openLCA è stato creato da <a id="greendelta">GreenDelta</a> ma esiste una community costituita da migliaia di utenti e da una rete internazionale di partners situati in diversi paesi. 
+community.text=aicpLCA è stato creato da <a id="greendelta">GreenDelta</a> ma esiste una community costituita da migliaia di utenti e da una rete internazionale di partners situati in diversi paesi. 
 community.title=Community
 gettingStarted.link=Per maggiori dettagli visualizza, ad es., <a id="video">questo video</a>.
-gettingStarted.text=Importa o crea un nuovo database oppure importa uno o più metodi LCIA. Entrambi sono disponibili sul sito <a id="nexus">openLCA Nexus</a>.
+gettingStarted.text=Importa o crea un nuovo database oppure importa uno o più metodi LCIA. Entrambi sono disponibili sul sito <a id="nexus">aicpLCA Nexus</a>.
 gettingStarted.title=Per iniziare
 manuals.link=Ti consigliamo anche il nostro <a id="channel">canale YouTube</a>.
 manuals.text=Se stai cercando qualche esempio, i manuali e i casi studio sono disponibili <a id="manuals">qui</a>.
@@ -12,5 +12,5 @@ title2=Per modellare il ciclo di vita delle cose.
 title3=Licenziato secondo la Mozilla Public Licence 2.0.
 title4=Creato e aggiornato dal 2006 da GreenDelta, Berlino
 whatsNew.link=Per maggiori dettagli, clicca <a id="news">qui</a>.
-whatsNew.text=Principali modifiche: Un <strong>Sistema di Qualità dei Dati</strong> documenta e calcola la qualità dei dati di processi, scambi e di interi sistemi prodotto. L' <strong>openLCA Collaboration Server</strong> mette a disposizione potenti funzionalità di gestione dei dati / revisioni in ambiente multi utente e si integra ora perfettamente con openLCA. Diversi miglioramenti all'usabilità e correzioni di bug.
+whatsNew.text=Principali modifiche: Un <strong>Sistema di Qualità dei Dati</strong> documenta e calcola la qualità dei dati di processi, scambi e di interi sistemi prodotto. L' <strong>aicpLCA Collaboration Server</strong> mette a disposizione potenti funzionalità di gestione dei dati / revisioni in ambiente multi utente e si integra ora perfettamente con aicpLCA. Diversi miglioramenti all'usabilità e correzioni di bug.
 whatsNew.title=Novità della versione 1.6
