--- a/olca-app-html/src/home/msg/messages_zh.properties
+++ b/olca-app-html/src/home/msg/messages_zh.properties
@@ -12,5 +12,5 @@ title2=用於建立各種生命週期評估
 title3=開放原始碼授權：由Mozilla 公開許可2.0
 title4=於2006年由GreenDelta, Berlin創建並開始維護
 whatsNew.link=了解更多關於版本1.6的細節<a id="news">這裡</a>.
-whatsNew.text=主要更新：新的<strong>資料品質系統</strong>可用於文件與資料品質的計算、資料交換、生產系統的完成. <strong>openLCA Collaboration Server</strong>伺服器能提供強大的多使用者使用資料管理與版本控制並整合於openLCA.幾個操作易用性的改進與程式本身問題的修正.
+whatsNew.text=主要更新：新的<strong>資料品質系統</strong>可用於文件與資料品質的計算、資料交換、生產系統的完成. <strong>aicpLCA Collaboration Server</strong>伺服器能提供強大的多使用者使用資料管理與版本控制並整合於openLCA.幾個操作易用性的改進與程式本身問題的修正.
 whatsNew.title=消息公告
