--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -106,7 +106,7 @@ CostValue=Maliyet de\u011Feri
 Costs=Maliyetler
 CostsPerUnit=Birim ba\u015F\u0131na maliyet
 CostsRevenues=Maliyetler/Kazan\u00E7lar
-CouldNotAllocateMemoryError=openLCA, hesaplamay\u0131 ger\u00E7ekle\u015Ftirmek i\u00E7in yeterli fiziksel haf\u0131zay\u0131 tahsis edemiyor. L\u00FCtfen 'Dosya/\u00D6zellikler'->Yap\u0131land\u0131rma ad\u0131mlar\u0131n\u0131 takip ederek haf\u0131za ayarlar\u0131n\u0131 d\u00FCzenleyin.\u00A0
+CouldNotAllocateMemoryError=aicpLCA, hesaplamay\u0131 ger\u00E7ekle\u015Ftirmek i\u00E7in yeterli fiziksel haf\u0131zay\u0131 tahsis edemiyor. L\u00FCtfen 'Dosya/\u00D6zellikler'->Yap\u0131land\u0131rma ad\u0131mlar\u0131n\u0131 takip ederek haf\u0131za ayarlar\u0131n\u0131 d\u00FCzenleyin.\u00A0
 CouldNotFindKMLData=Sa\u011Flad\u0131\u011F\u0131n\u0131z dosyada KML verisi bulunamad\u0131. Bu dosya EcoSpold2 dosya bi\u00E7imi ile uyumlu mu? Bi\u00E7im ile ilgili daha fazla bilgiye\u00A0http\://www.ecoinvent.org/data-providers/how-to-submit-data/ecospold2 ula\u015Fabilirsiniz.
 CouldNotOpenDatabase=Veri taban\u0131 a\u00E7\u0131lam\u0131yor
 Country=\u00DClke
@@ -138,7 +138,7 @@ Cut=Kes
 DBImportNoTarget=\u0130\u00E7e aktar\u0131m i\u00E7in hedef veri taban\u0131n\u0131 a\u00E7mal\u0131s\u0131n\u0131z.\u00A0
 DBImportNoTargetConnectionFailedMessage=Bu s\u00FCr\u00FCm kaynak veri taban\u0131ndan al\u0131nam\u0131yor.
 DBImportUpdateDatabaseQuestion=\u0130\u00E7e aktar\u0131m\u0131 \u00E7al\u0131\u015Ft\u0131rmak i\u00E7in kaynak veri taban\u0131n\u0131 g\u00FCncellemeniz gerekiyor. Bu eylemi ger\u00E7ekle\u015Ftirmek istiyor musunuz?
-DBImportVersionNewerMessage=Kaynak veri taban\u0131n\u0131n s\u00FCr\u00FCm\u00FC bu openLCA s\u00FCr\u00FCm\u00FCnden yeni.
+DBImportVersionNewerMessage=Kaynak veri taban\u0131n\u0131n s\u00FCr\u00FCm\u00FC bu aicpLCA s\u00FCr\u00FCm\u00FCnden yeni.
 DataCollectionPeriod=Veri toplama s\u00FCresi
 DataCompleteness=Veri b\u00FCt\u00FCnl\u00FC\u011F\u00FC
 DataGenerator=Veri \u00FCretici
@@ -154,10 +154,10 @@ DatabaseContent=Veri taban\u0131 i\u00E7eri\u011Fi
 DatabaseImport=Veritaban\u0131 i\u00E7e aktar\u0131m\u0131
 DatabaseImportDescription=Mevcut bir veri taban\u0131ndan faal veri taban\u0131na veri aktar\u0131r
 DatabaseName=Veri taban\u0131 ad\u0131
-DatabaseNewerThanThisError=Verilen veri taban\u0131 openLCA'n\u0131n bu s\u00FCr\u00FCm\u00FCnden yeni.
+DatabaseNewerThanThisError=Verilen veri taban\u0131 aicpLCA'n\u0131n bu s\u00FCr\u00FCm\u00FCnden yeni.
 DatabaseRenameError=Verilen isim ge\u00E7erli de\u011Fil ya da bu isimler bir veri taban\u0131 mevcut.
 DatabaseType=Veri taban\u0131 t\u00FCr\u00FC
-DatabaseVersionCheckFailed=Veri taban\u0131ndan bu s\u00FCr\u00FCm al\u0131nam\u0131yor. Bu bir openLCA veri taban\u0131 m\u0131?
+DatabaseVersionCheckFailed=Veri taban\u0131ndan bu s\u00FCr\u00FCm al\u0131nam\u0131yor. Bu bir aicpLCA veri taban\u0131 m\u0131?
 DatabaseWasExportedToFile=Veri taban\u0131 dosyaya aktar\u0131ld\u0131
 DecimalSeparator=Ondal\u0131k ay\u0131r\u0131c\u0131
 DefaultFlowProperty=Varsay\u0131lan ak\u0131\u015F \u00F6zelli\u011Fi
@@ -236,7 +236,7 @@ FetchingCommits=Atamalar getiriliyor
 FetchingData=Veri getiriliyor
 FileAlreadyExists=Dosya mevcut
 FileDoesNotExist=Dosya mevcut de\u011Fil
-FileImportPage_Description=L\u00FCtfen openLCA'ya aktaraca\u011F\u0131n\u0131z dosyalar\u0131 se\u00E7in.
+FileImportPage_Description=L\u00FCtfen aicpLCA'ya aktaraca\u011F\u0131n\u0131z dosyalar\u0131 se\u00E7in.
 Files=Dosyalar
 Filter=Filtre
 FilterByName=\u0130sme g\u00F6re filtrele
@@ -347,7 +347,7 @@ Latitude=Enlem
 Layout=Yerle\u015Fim
 LciaCategoryDescriptionTable=YDEA kategori tan\u0131mlama tablosu
 LciaResultTable=YDEA sonu\u00E7 tablosu
-LibgfortanInfo=openLCA geli\u015Fmi\u015F hesaplama performans\u0131 i\u00E7in jblas k\u00FCt\u00FCphanesini kullanmaktad\u0131r. Bu k\u00FCt\u00FCphane, Linux'a libfortran3 paketinin y\u00FCklenmesini gerektirmektedir ancak sisteminiz i\u00E7in bu uygun g\u00F6r\u00FCnmemektedir. openLCA'n\u0131n geli\u015Fmi\u015F hesaplama \u00F6zelliklerini kullanmak istiyorsan\u0131z, bu paketi y\u00FCklemenizi \u00F6neriyoruz. E\u011Fer Ubuntu sistemini kullan\u0131yorsan\u0131z, paketi 'apt-get install libgfortran3' ile y\u00FCklemenizi \u00F6neririz.\u00A0
+LibgfortanInfo=aicpLCA geli\u015Fmi\u015F hesaplama performans\u0131 i\u00E7in jblas k\u00FCt\u00FCphanesini kullanmaktad\u0131r. Bu k\u00FCt\u00FCphane, Linux'a libfortran3 paketinin y\u00FCklenmesini gerektirmektedir ancak sisteminiz i\u00E7in bu uygun g\u00F6r\u00FCnmemektedir. aicpLCA'n\u0131n geli\u015Fmi\u015F hesaplama \u00F6zelliklerini kullanmak istiyorsan\u0131z, bu paketi y\u00FCklemenizi \u00F6neriyoruz. E\u011Fer Ubuntu sistemini kullan\u0131yorsan\u0131z, paketi 'apt-get install libgfortran3' ile y\u00FCklemenizi \u00F6neririz.\u00A0
 Line=\u00C7izgi
 Local=Yerel
 LocalDatabase=Yerel veri taban\u0131
@@ -567,7 +567,7 @@ SearchingForUnits=Birimleri ar\u0131yor...
 Section=B\u00F6l\u00FCm
 SelectADirectory=Bir dizin se\u00E7
 SelectImportFiles=\u0130\u00E7e aktar\u0131lacak dosyalar\u0131 se\u00E7in.
-SelectLanguageNoteMessage=openLCA yeniden ba\u015Flat\u0131lana kadar de\u011Fi\u015Fiklikler etkisini g\u00F6stermeyecektir.
+SelectLanguageNoteMessage=aicpLCA yeniden ba\u015Flat\u0131lana kadar de\u011Fi\u015Fiklikler etkisini g\u00F6stermeyecektir.
 SelectNext=Bir sonrakini se\u00E7
 SelectPrevious=Bir \u00F6ncekini se\u00E7
 SelectProviders=Temin edenleri se\u00E7
